force-app/main/default/objects/League_Membership__c/League_Membership__c.object-meta.xml
<CustomObject>
    <label>League Membership</label>
    <nameField>
        <displayFormat>LM-{0000}</displayFormat>
        <label>League Membership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>League Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>