force-app/main/default/objects/League_Membership__c/fields/Anonymized_Candidate_Key__c.field-meta.xml
<CustomField>
    <fullName>Anonymized_Candidate_Key__c</fullName>
    <label>Anonymized Candidate Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>