force-app/main/default/objects/League_Membership__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>League Memberships</relationshipLabel>
    <relationshipName>League_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>