force-app/main/default/objects/League_Membership__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>League Memberships</relationshipLabel>
    <relationshipName>League_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>