force-app/main/default/objects/League_Membership__c/fields/Full_Profile_Unlocked__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_Unlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Profile Unlocked</label>
    <type>Checkbox</type>
</CustomField>