force-app/main/default/objects/League_Membership__c/fields/Identity_Reveal_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Identity_Reveal_Responded_Date__c</fullName>
    <label>Identity Reveal Responded Date</label>
    <type>DateTime</type>
</CustomField>