force-app/main/default/objects/League_Membership__c/fields/Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date__c</fullName>
    <label>Joined Date</label>
    <type>DateTime</type>
</CustomField>