force-app/main/default/objects/League_Membership__c/fields/Sentiment_Tags__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Tags__c</fullName>
    <label>Sentiment Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>