force-app/main/default/objects/League_Membership__c/fields/Swipe_Event__c.field-meta.xml
<CustomField>
    <fullName>Swipe_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swipe Event</label>
    <referenceTo>Swipe_Event__c</referenceTo>
    <relationshipLabel>League Memberships</relationshipLabel>
    <relationshipName>League_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>