force-app/main/default/objects/League_Membership__c/fields/Talent_League__c.field-meta.xml
<CustomField>
    <fullName>Talent_League__c</fullName>
    <label>Talent League</label>
    <referenceTo>Talent_League__c</referenceTo>
    <relationshipLabel>League Memberships</relationshipLabel>
    <relationshipName>League_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>